# JPEGContentGuardISO10918

./: .gitignore  README.md
analysis/: README.txt  analyze.py
analysis/dynamic/gcov/: README.txt  analyze.py  confgen.py  djpeg.patch.1  djpeg.patch.2  djpg_6b_and_guard.py  djpg_6b_and_lean_guard.py  djpg_6b_standalone.py  djpg_and_guard.py  djpg_moz_and_guard.py  djpg_moz_and_lean_guard.py  djpg_moz_standalone.py  djpg_standalone.py  djpg_turbo_and_guard.py  djpg_turbo_and_lean_guard.py  djpg_turbo_standalone.py  guard.patch.1  guard.py  lean_guard.py  rdjpegcom.patch.1  rdjpegcom.patch.2  rdjpgcom.patch.1  rdjpgcom.patch.2  rdjpgcom_6b_and_guard.py  rdjpgcom_6b_and_lean_guard.py  rdjpgcom_6b_standalone.py  rdjpgcom_and_guard.py  rdjpgcom_moz_and_guard.py  rdjpgcom_moz_and_lean_guard.py  rdjpgcom_moz_standalone.py  rdjpgcom_standalone.py  rdjpgcom_turbo_and_guard.py  rdjpgcom_turbo_and_lean_guard.py  rdjpgcom_turbo_standalone.py  results.py  throfdbg_and_guard.py  throfdbg_and_lean_guard.py  throfdbg_standalone.py  utils.py
analysis/dynamic/gcov/djpeg_analysis/: index-sort-f.html  index-sort-l.html  index.html
analysis/dynamic/gcov/patches/: djpeg.patch.1  djpeg.patch.2  guard.patch.1  lean-guard.patch.1  rdjpgcom.patch.1  rdjpgcom.patch.2  throfdbg.patch.1
analysis/dynamic/gcov/rdjpgcom_analysis/: index-sort-f.html  index-sort-l.html  index.html
analysis/static/cppcheck/: README.txt  analyze.py
analysis/static/cppcheck/code_analysis/: analysis_results.xml  index.html  stats.html
guard/: CMakeLists.txt
guard/src/: Config.cpp  Config.hpp  Gauntlet.cpp  Gauntlet.hpp  Metrics.cpp  Metrics.hpp  logging.cpp  logging.hpp  main.cpp  utils.cpp  utils.hpp
guard/src/cfg/: example.cfg
guard/test/unittest/: Guard_test.h
lean-guard/: CMakeLists.txt
lean-guard/src/: main.cpp
results/: results.csv
